--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,22 @@ logs
 *.log
 logs/*
 
+# Ignore large database file
+test.db
+
+# Ignore git objects (Git's internal storage)
+.git/objects/
+.git/objects/pack/
+
+# Ignore node_modules
+node_modules/
+
+# Ignore faker package files inside node_modules (if necessary)
+node_modules/faker/
+node_modules/@faker-js/
+
+
+
 # Environment Variables
 .env
 
